// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArgumentCard /> renders correcty 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Heading
            as="h5"
            fontWeight="700"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Heading>
        </Tag>
      </ForwardRef>
      <Text
        color="neutral-gray.500"
      >
        Invalid date
      </Text>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      alignItems="center"
      flexDirection="row"
      mt={3}
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="md"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="gray.500"
        fontSize={3}
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;

exports[`<ArgumentCard /> renders correcty on mobile 1`] = `
<Card
  bg="white"
  p={6}
>
  <ForwardRef
    direction="column"
  >
    <ForwardRef
      alignItems="center"
      direction="row"
      justifyContent="space-between"
      mb={2}
    >
      <ForwardRef
        alignItems="center"
        direction="row"
      >
        <Text
          maxWidth="100px"
          mr={2}
        >
          Agui
        </Text>
        <Tag
          variant="green"
        >
          <Heading
            as="h5"
            fontWeight="700"
            uppercase={true}
          >
            <FormattedMessage
              id="global.for"
              values={Object {}}
            />
          </Heading>
        </Tag>
      </ForwardRef>
      <Text
        color="neutral-gray.500"
      >
        Invalid date
      </Text>
    </ForwardRef>
    <Text>
      Je suis pour le LSD dans nos cantines
       
    </Text>
    <ForwardRef
      alignItems="center"
      flexDirection="row"
      mt={3}
    >
      <Connect(LoginOverlay)>
        <ButtonQuickAction
          icon="THUMB_UP"
          iconColor="green.500"
          label={
            <FormattedMessage
              id="global.cancel"
              values={Object {}}
            />
          }
          mr={1}
          onClick={[Function]}
          size="lg"
          variantColor="green"
        />
      </Connect(LoginOverlay)>
      <Text
        as="span"
        color="gray.500"
        fontSize={3}
      >
        500
      </Text>
    </ForwardRef>
  </ForwardRef>
</Card>
`;
